fixed navbar bug on small screens

--- a/src/features/navbar/navbar.scss
+++ b/src/features/navbar/navbar.scss
@@ -1,27 +1,31 @@
 .navbar {
-    width: 100%;
-    height: 4rem;
-    background-color: #444;
-    display: grid;
-    position: sticky;
-    top: 0;
-    z-index: 10;
-    grid-template-columns: repeat(3, 1fr);
-    align-items: center;
-    justify-items: center;
-    padding-inline: 3.125rem;
-    box-shadow: 0 2px 5px hsla(0 0% 0%/ 0.25);
-    img:hover {
-        cursor: pointer;
-    }
-    img[alt="Menu"] {
-        justify-self: end;
-        z-index: 1000;
-    }
-    img[alt="Logo"] {
-        justify-self: start;
-    }
-    @media only screen and (max-width: 900px) {
-        padding-inline: 1rem;
-    }
+  width: 100%;
+  height: 4rem;
+  background-color: #444;
+  display: grid;
+  position: sticky;
+  top: 0;
+  z-index: 10;
+  grid-template-columns: repeat(3, 1fr);
+  align-items: center;
+  justify-items: center;
+  padding-inline: 3.125rem;
+  box-shadow: 0 2px 5px hsla(0 0% 0%/ 0.25);
+  img:hover {
+    cursor: pointer;
+  }
+  img[alt="Menu"] {
+    justify-self: end;
+    z-index: 1000;
+  }
+  img[alt="Logo"] {
+    justify-self: start;
+  }
+  @media only screen and (max-width: 900px) {
+    padding-inline: 1rem;
+  }
+  @media only screen and (max-width: 500px) {
+    display: flex;
+    justify-content: space-between;
+  }
 }
